src/test/ui/issues/issue-101998/issue-101998.stderr
error[E0308]: mismatched types
  --> $DIR/issue-101998.rs:2:5
   |
LL | fn parse_num(num: String) -> i32 {
   |                              --- expected `i32` because of return type
LL |     num.parse()
   |     ^^^^^^^^^^^
   |     |
   |     expected `i32`, found enum `Result`
   |     help: Either change the return type or use `unwrap`: `num.parse().unwrap()`
   |
   = note: expected type `i32`
              found enum `Result<_, _>`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
