src/test/ui/issues/issue-101998/issue-101998.rs
fn parse_num(num: String) -> i32 {
    num.parse()
    //~^ ERROR mismatched types [E0308]
}

fn main(){}
